test_cases/negative/return_in_top_level.snek
return Add(10, 10);
